# sharpml_web_demo

./: .gitignore  Cargo.toml  README.md  run.sh  server.py
crates/sharp-mcu-cli/: Cargo.toml
crates/sharp-mcu-cli/src/: main.rs
crates/sharp-mcu-core/: Cargo.toml
crates/sharp-mcu-core/apple/: sharp_coreml_runner.swift
crates/sharp-mcu-core/src/: coreml_native.rs  lib.rs  manifest.rs  motion.rs  onnx.rs  pipeline.rs  ply.rs
crates/sharp-mcu-preview/: Cargo.toml
crates/sharp-mcu-preview/src/: main.rs
static/: index.html
