[package]
name = "sharp-mcu-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
hf-hub.workspace = true
image.workspace = true
ndarray.workspace = true
onnx-protobuf.workspace = true
ort.workspace = true
protobuf.workspace = true
serde.workspace = true
serde_json.workspace = true
